# guitar-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: classical_headstock.txt  fender_strat_headstock.txt
src/guitar-cli/: core.py  utils.py
src/guitar_cli/: cli.py  core.py  headstock_ascii_art.txt  utils.py
src/tests/: test_core.py  test_misc.py
