[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-cli"
version = "0.1.0"
description = "CLI for visualizing guitar chords and more"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Peter Lin", email = "peter.lin2305@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["click>=8.0", "readchar>=4.2.1", "rich>=14.1.0"]

[project.scripts]
gcli = "guitar_cli.cli:cli"

[project.optional-dependencies]
dev = ["black>=25.1.0", "pre-commit>=4.3.0"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["guitar_cli"]
